1. assert fail when exception