@@ -4,7 +4,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
 
 import java.text.ParseException;
-import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 
@@ -19,12 +18,11 @@ import name.qd.analysis.tech.analyzer.TechAnalyzerManager;
 import name.qd.analysis.tech.vo.AnalysisResult;
 import name.qd.analysis.utils.TimeUtils;
 
-public class ABITest {
+public class ADLTest {
 	private TechAnalyzerManager manager = new FakeAnalyzerManager();
 	private DataSource dataSource = new FakeDataSource();
 	private String startDate = "20180505";
 	private String endDate = "20180606";
-	private String days = "5";
 	private Date from;
 	private Date to;
 	
@@ -42,15 +40,12 @@ public class ABITest {
 	@Test
 	public void analyzeTest() {
 		try {
-			List<AnalysisResult> lst = manager.getAnalysisResult(dataSource, TechAnalyzers.ABI, "", from, to);
+			List<AnalysisResult> lst = manager.getAnalysisResult(dataSource, TechAnalyzers.ADL, "1101", from, to);
 			for (int i = 0; i < lst.size(); i++) {
 				Date currentDate = TimeUtils.afterDays(from, i);
 				assertEquals(lst.get(i).getDate(), currentDate);
 				
-				Calendar calendar = Calendar.getInstance();
-				calendar.setTime(currentDate);
-				int day = calendar.get(Calendar.DATE);
-				assertEquals(lst.get(i).getValue().get(0), Double.valueOf(2*day));
+				assertEquals(lst.get(i).getValue().get(0), new Double(0));
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
@@ -61,20 +56,14 @@ public class ABITest {
 	@Test
 	public void customTest() {
 		try {
-			List<AnalysisResult> lst = manager.getCustomAnalysisResult(dataSource, TechAnalyzers.ABI, "", from, to, days);
-			int iDays = Integer.parseInt(days);
+			List<AnalysisResult> lst = manager.getCustomAnalysisResult(dataSource, TechAnalyzers.ADL, "1101", from, to, "Y");
+			double sum = 0;
 			for (int i = 0; i < lst.size(); i++) {
-				Date currentDate = TimeUtils.afterDays(from, iDays-1+i);
+				Date currentDate = TimeUtils.afterDays(from, i);
 				assertEquals(lst.get(i).getDate(), currentDate);
 				
-				double sum = 0;
-				for(int x = 0; x < iDays; x++) {
-					Date date = TimeUtils.afterDays(currentDate, -x);
-					Calendar calendar = Calendar.getInstance();
-					calendar.setTime(date);
-					sum = sum + (2 * calendar.get(Calendar.DATE));
-				}
-				assertEquals(lst.get(i).getValue().get(0), Double.valueOf(sum/iDays));
+				sum = sum + 0;
+				assertEquals(lst.get(i).getValue().get(0), Double.valueOf(sum));
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
